[package]
name = "surqx"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["example", "macros"]

[dependencies]
surqx-macros = { path = "./macros" }
surrealdb-core = { version = "2.3.7", default-features = false, features = ["kv-mem"] }
serde = { version = "1", default-features = false, features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
surrealdb = { version = "2.3.7", default-features = false, features = ["kv-mem"] }
