[package]
name = "surqx-macros"
version = "0.1.2"
description = "Macros for the surqx crate"
license = "Apache-2.0"
edition = "2024"
rust-version = "1.88"
repository = "https://github.com/bysensa/surqx"
categories = ["database", "rust-patterns"]
keywords = ["surrealdb", "query", "proc-macro"]

[lib]
proc-macro = true

[dependencies]
quote = "1"
nanoid = "0.4.0"
proc-macro2 = "1"
surrealdb-core = { version = "2.3.7", default-features = false }
unicase = "2.7.0"
phf_macros = "0.11.3"
phf = "0.11.3"
